[package]
name = "bilibili-live-danmu-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1", features = ["tokio1"]}
async-tls = "0.11.0"
async-tungstenite = {version = "0.17", features = ["async-std-runtime", "async-tls"]}
bincode = "1.3"
futures = "0.3"
md5 = "0.7"
miniz_oxide = "0.6.1"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
serde_json = "1.0"
url = "2.2"
